--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -76,27 +76,6 @@
                 android:minLines="3" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayoutCategory"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_large"
-            android:hint="Категория"
-            app:startIconDrawable="@drawable/ic_events"
-            app:startIconTint="?attr/colorOnSurface"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription"
-            app:layout_constraintBottom_toTopOf="@id/cardViewDate"
-            >
-
-            <AutoCompleteTextView
-                android:id="@+id/dropdownCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none"/>
-        </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -116,7 +95,7 @@
             app:cardBackgroundColor="?attr/colorSurface"
             app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCategory">
+            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription">
 
             <TextView
                 android:id="@+id/textViewDate"
@@ -213,7 +192,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberSigned|numberDecimal"
-                android:text="15" />
+                android:text=" " />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -234,7 +213,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberSigned|numberDecimal"
-                android:text="30" />
+                android:text=" " />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -256,7 +235,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:text="10" />
+                android:text=" " />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
@@ -302,4 +281,4 @@
             app:layout_constraintTop_toTopOf="@id/buttonSave"
             app:layout_constraintHorizontal_weight="1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView> 
+</androidx.core.widget.NestedScrollView>
